<resources>
    <string name="app_name">TouristGuide</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="edit_name">Edit your name</string>
    <string name="edit_email">Edit your email</string>
    <string name="edit_number">Edit your phone number</string>
    <string name="save_changes">Save Changes</string>
    <string name="big_text_login">Login</string>
    <string name="big_text_register">Register</string>
    <string name="name_text">Name</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="dont_have_acc">Don\'t have an account</string>
    <string name="then_register">Then Register</string>
    <string name="then_login">Then Login</string>
    <string name="fav_fragment">Favorite Fragment</string>
    <string name="inbox_fragment">Inbox Fragment</string>
    <string name="trips_fragment">Trips Fragment</string>
    <string name="help_user">What can we help you with </string>
    <string name="stays_text">Stays</string>
    <string name="exploration_text">Exploration</string>
    <string name="adventures_text">Adventures</string>
    <string name="experience_text">Experience</string>
    <string name="view_profile_text">View Profile</string>
    <string name="favorites_text">Favorites</string>
    <string name="currency_text">Currency</string>
    <string name="call_text">Call Us</string>
    <string name="language_text">Language(US English)</string>
    <string name="consent_text">Consent</string>
    <string name="become_host_text">Consent</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="delete_user">Delete User</string>
    <string name="alertDialogDelete">Are you sure you want to delete this user?</string>
    <string name="provideUsername">You must provide a editName</string>
    <string name="provideEmail">You must provide a editEmail</string>
    <string name="requireEmail">email is required</string>
    <string name="requireUsername">username is required</string>
    <string name="add_a_new_stay">Add a new stay</string>
    <string name="stay_name">Stay Name</string>
    <string name="stay_description">Stay Description</string>
    <string name="stay_picture_added_in_java_string_atm">Stay Picture(Added in java string atm)</string>
    <string name="add_stay">Add Stay</string>
    <string name="add_stay_name">Please add a stay name</string>
    <string name="add_stay_description">Please add a stay description</string>
    <string name="stay_name_required">Stay name is required</string>
    <string name="stay_description_required">Stay Description required</string>
    <string name="add_stay_picture">Please add stay picture</string>
    <string name="stay_picture_required">Stay picture required</string>
    <string name="success_add_stay">Successfully added the stay</string>
    <string name="add_a_new_favorite">Add a new Favorite(Firebase insert)</string>
    <string name="location_name">Location Name</string>
    <string name="add_description">Add Description</string>
    <string name="add_your_rating_out_of_5">Add your rating out of 5</string>
    <string name="add_description_favorite">Add Description text</string>
    <string name="fill_location">Fill location</string>
    <string name="add_rating">Add rating</string>
    <string name="favorites">Favorites(Firebase fetch)</string>
    <string name="have_an_account">Have an account?</string>
    <string name="successful_data_insert">Successfully inserted Data</string>
    <string name="user_no_exist">user doesn\'t exists</string>
    <string name="provide_username">You must provide a username</string>
    <string name="username_required">Username is required</string>
    <string name="provide_password">You must provide a password</string>
    <string name="password_required">Password is required</string>
    <string name="provide_email">You must provide a valid email</string>
    <string name="require_email">Email is required</string>
    <string name="require_password">Password is required</string>
    <string name="sharedpref_done">SharedPreferences Done</string>

</resources>
