<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/containerRelative"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitites.EditProfileActivity">

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="48dp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"
            android:textSize="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_email"
            android:textSize="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/saveEditChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/deleteProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/red"/>



    </LinearLayout>

</RelativeLayout>