<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_profile_text"
        android:textSize="50dp"
        android:textFontWeight="1000"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_new_stay"
        android:textSize="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_description_favorite"
        android:textSize="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />


</LinearLayout>