<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitites.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="vertical"
            android:layout_gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_text_register"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="80dp" />

            <EditText
                android:id="@+id/registerNameEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/name_text"
                android:padding="10dp"
                android:inputType="text"
                android:background="@drawable/rounded_login_input"/>

            <EditText
                android:id="@+id/registerEmailEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_login_input"/>

            <EditText
                android:id="@+id/registerPasswordEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_login_input"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_rectangle_register_button"
                android:text="@string/big_text_register"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/then_login"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>