<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/userInfoLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/stays_pic"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FF000000"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text"
                        android:textSize="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"
                        android:textColor="#000"
                        />

                    <TextView
                        android:id="@+id/emailText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_text"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="#000"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_profile_text"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="#000"
                        />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/numberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/editProfileCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="4dp"
            android:clickable="true"
            android:onClick="openEditProfile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/edit_profile"
                android:textSize="30dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_person_outline_black_48dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>



            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/favorites_text"
                android:textSize="30dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_favorite_border_black_48dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/currency_text"
                android:textSize="30dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_attach_money_black_48dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/call_text"
                android:textSize="30dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_phone_android_black_48dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/language_text"
                android:textSize="30dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_language_black_48dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/consent_text"
                android:textSize="30dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_assignment_black_48dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/become_host_text"
                android:textSize="30dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_home_black_48dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/sign_out_text"
                android:textSize="30dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_exit_to_app_black_48dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>